--- a/www.topmonks.com/src/stylesheets/profi-option.scss
+++ b/www.topmonks.com/src/stylesheets/profi-option.scss
@@ -67,6 +67,10 @@ ul.polygon_green li::before {
   content: url("https://res.cloudinary.com/topmonks/image/upload/v1556628327/topmonks.com/profi-option/polygon_green.svg");
 }
 
+.title_box {
+  max-width: 670px;
+}
+
 .text-center {
   text-align: center;
 }
@@ -74,9 +78,9 @@ ul.polygon_green li::before {
 // Section: Introduction //
 .intro {
   .intro_main-text {
-    max-width: 674px;
     margin: 0 auto;
   }
+
   img {
     width: 100%;
     height: auto;
@@ -107,13 +111,45 @@ ul.polygon_green li::before {
   .our-design {
     max-width: 674px;
   }
+
   img {
     width: 100%;
     height: auto;
   }
+
   @media (min-width: 1024px) {
     .mdc-layout-grid {
       padding: 0;
+    }
+  }
+}
+
+// Section: Visual and Testing //
+.analysis {
+  .title_box {
+    margin: 0 auto;
+  }
+}
+
+// Section: Visual and Testing //
+
+.stylization {
+
+  @media screen and (min-width: 840px) {
+    h3 {
+      font-size: 32px;
+      text-align: center;
+    }
+    ul {
+      text-align: center;
+      padding: 0;
+      li {
+        list-style: none;
+        display: inline-flex;
+        a {
+          padding: 4px 3em;
+        }
+      }
     }
   }
 }
@@ -125,6 +161,7 @@ ul.polygon_green li::before {
     line-height: 25px;
   }
 }
+
 @media (max-width: 839px) {
   h1 {
     font-size: 34px;
