--- a/www.topmonks.com/src/stylesheets/profi-option.scss
+++ b/www.topmonks.com/src/stylesheets/profi-option.scss
@@ -33,9 +33,14 @@ h3 {
   font-size: 24px;
 }
 
-p, a, span {
+h4, p, a, span {
   font-size: 16px;
   font-weight: normal;
+}
+
+span {
+  font-size: 14px;
+  line-height: 22px;
 }
 
 img {
@@ -116,6 +121,13 @@ ul.polygon_green li::before {
     width: 100%;
     height: auto;
   }
+}
+
+.design, .scheme {
+  img {
+    width: 100%;
+    height: auto;
+  }
 
   @media (min-width: 1024px) {
     .mdc-layout-grid {
@@ -134,6 +146,50 @@ ul.polygon_green li::before {
 // Section: Visual and Testing //
 
 .stylization {
+  h2 {
+    margin-top: 0;
+  }
+
+  h3, h4 {
+    text-align: center;
+    font-family: 'Muli', sans-serif;
+    font-style: normal;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 21px;
+    color: #9197A3;
+    margin-bottom: 0;
+    font-family: 'Muli', sans-serif;
+    font-style: normal;
+  }
+
+  .styled-title {
+    align-self: end;
+    @media (max-width: 560px) {
+      display: none;
+    }
+  }
+
+  .box {
+    max-width: 1008px;
+    margin: 0 auto;
+    padding-bottom: 1em;
+  }
+
+  .empty-box {
+    @media (min-width: 480px) and (max-width: 1024px) {
+      display: none;
+    }
+  }
+
+  .stylization_font {
+    max-width: 735px;
+    @media screen and (min-width: 1024px) {
+      padding-bottom: 2.5em;
+    }
+  }
 
   @media screen and (min-width: 840px) {
     h3 {
@@ -143,9 +199,11 @@ ul.polygon_green li::before {
     ul {
       text-align: center;
       padding: 0;
+
       li {
         list-style: none;
         display: inline-flex;
+
         a {
           padding: 4px 3em;
         }
@@ -155,6 +213,50 @@ ul.polygon_green li::before {
 }
 
 
+// Section: Prototypes //
+.prototypes_design {
+  margin: 0 -1em;
+  @media screen and (min-width: 1024px) {
+    padding-bottom: 2.5em;
+    img {
+      width: 100%;
+      margin: 0 -1em;
+    }
+  }
+}
+
+// Section: References //
+.references {
+  p {
+    color: #000000;
+  }
+  span {
+    color: #5C5FD4;
+  }
+}
+
+// Section: Contact //
+.contact {
+  h2, p {
+    text-align: left;
+  }
+  .contact_box {
+    text-align: left;
+
+    p {
+      line-height: 25px;
+      margin: 0 auto;
+    }
+
+    img {
+      border-radius: 50%;
+    }
+
+    a {
+      text-decoration: none;
+    }
+  }
+}
 // Tablets and Phones Devices //
 @media screen and (min-width: 840px) {
   body {
