PO - footer: color details

--- a/www.topmonks.com/src/stylesheets/profi-option.scss
+++ b/www.topmonks.com/src/stylesheets/profi-option.scss
@@ -527,7 +527,7 @@ footer {
   text-align: left;
   background-color: #212142;
 
-  h4, a {
+  h4, a, span {
     color: #FFFFFF;
     text-align: left;
     font-size: 18px;
