Profi Option - footer in mobile devices

--- a/www.topmonks.com/src/stylesheets/profi-option.scss
+++ b/www.topmonks.com/src/stylesheets/profi-option.scss
@@ -528,6 +528,7 @@ ul.polygon_green li::before {
     }
   }
   @media (max-width: 839px) {
+    margin-bottom: 2em;
     .contact .contact_box {
       padding: 12px 8px;
       img {
