--- a/www.topmonks.com/src/stylesheets/profi-option.scss
+++ b/www.topmonks.com/src/stylesheets/profi-option.scss
@@ -316,7 +316,8 @@ ul.polygon_green li::before {
         padding: 0.5em; //8px;
         border-radius: 0.5em; //8px;
         z-index: 100;
-        font-size: 1em; //16px;
+        font-size: 16px;
+        font-weight: 800;
         line-height: 2;
         text-transform: uppercase;
         right: 0;
