--- a/www.topmonks.com/src/stylesheets/profi-option.scss
+++ b/www.topmonks.com/src/stylesheets/profi-option.scss
@@ -145,8 +145,8 @@ ul.polygon_green li::before {
     text-transform: uppercase;
     font-size: 0.875em; //14px;
     position: absolute;
-    top: 0.438em; //7px;
-    left: 2.25em; //36px;
+    top: 0.65em;
+    left: 2.5em;
   }
 
   .tm-hamburger__bar {
@@ -169,14 +169,20 @@ ul.polygon_green li::before {
   .tm-hamburger__container--open {
     .tm-hamburger__bar:first-of-type {
       transform: rotate(-45deg);
+      background-color: #FFFFFF;
+
     }
 
     .tm-hamburger__bar:nth-of-type(2) {
       opacity: 0;
+      background-color: #FFFFFF;
+
     }
 
     .tm-hamburger__bar:last-of-type {
       transform: rotate(45deg);
+      background-color: #FFFFFF;
+
     }
   }
 }
@@ -211,7 +217,8 @@ ul.polygon_green li::before {
   @media screen and (max-width: 839px) {
     position: fixed;
     .tm-hamburger__container::after {
-      color: rgba(45, 61, 144, 0.5);
+      color: #FFFFFF;
+      vertical-align: center;
     }
     .tm-hamburger__bar {
       background-color: #2d3d90;
@@ -222,6 +229,7 @@ ul.polygon_green li::before {
     }
     .tm-menu__list {
       background-color: #0c0449;
+      padding: 1em 0;
 
       a {
         color: white;
@@ -238,7 +246,7 @@ ul.polygon_green li::before {
   @media screen and (max-width: 839px) {
     width: 100vw;
     height: 100vh;
-    padding-top: 4em; //64px;
+    padding-top: 2.2em;
     transform: translate(calc(-100vw - 12px), -64px);
     transform: translate(calc(-140vw - 12px), -64px);
     position: fixed;
@@ -435,11 +443,10 @@ ul.polygon_green li::before {
       margin-bottom: 0;
     }
 
-
     @media screen and (min-width: 840px) {
       padding-bottom: 2.5em;
       h2.font_bold {
-        line-height: 3.75em; //60px;
+        line-height: 60px;
       }
     }
 
